samples/_failures_safe/1761153970_032798_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb3bf4e8.c: In function ‘main’:
./samples/SAFE/__tmp_fb3bf4e8.c:168:9: error: expected expression at end of input
  168 |         if (from < 0 || from >= node_count || to < 0 || to >=
      |         ^~
./samples/SAFE/__tmp_fb3bf4e8.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb3bf4e8.c:168:9: error: expected declaration or statement at end of input
